Build templates for Category product 518 Row * Created three row options * Customized ACF builder panel * Fixed order of columns with side text on mobile ( setting text to appear below image ) * Set new margin-top on H2 at max-width 765px * Add full-width row with no promo-text row

--- a/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_product-cat.scss
+++ b/wp-content/themes/soss-catalog-theme/assets/styles/layouts/_product-cat.scss
@@ -7,6 +7,11 @@
     font-size: 1.2rem;
   }
 }
+@media screen and (max-width: 765px) {
+  h2 {
+    margin-top: 1rem !important;
+  }
+}
 .hero-cat {
   justify-content: center;
   align-items: center;
@@ -77,6 +82,8 @@
 
     }
   }
+
+
   .catch-phrase {
     align-self: start;
     text-align: center;
